@@ -1325,6 +1325,29 @@ class PokerRendererTests(unittest.TestCase):
         self.renderer.state = pokerrenderer.PAY_BLIND_ANTE
         self.renderer.changeState(pokerrenderer.PAY_BLIND_ANTE_SEND, "throw-chip-at-dealer")
         self.assertEquals(get_messages(), ["changeState pay_blind_ante => pay_blind_ante_send (args = ('throw-chip-at-dealer',), kwargs = {})", 'ERROR *CRITICAL*  unknow what throw-chip-at-dealer'])
+    # -----------------------------------------------------------------------------------------------------
+    def test36_weirdStateinChashier(self):
+        """changeState() for CASHIER gets invalid situation.
+        changeState() gives a critical error when neither
+        self.protocol.user.isLogged() nor self.canHideInterface() are
+        true."""
+        clear_all_messages()
+        proto = PokerRendererTests.MockPokerProtocol()
+        self.renderer.setProtocol(proto)
+
+        def alwaysFalseNoArgs(): return False
+        isLogged = proto.user.isLogged
+        proto.user.isLogged = alwaysFalseNoArgs
+        canHide = self.renderer.canHideInterface
+        self.renderer.canHideInterface = alwaysFalseNoArgs
+
+        self.renderer.changeState(pokerrenderer.CASHIER)
+        self.assertEquals(get_messages(), ['changeState idle => cashier (args = (), kwargs = {})',
+                                           'ERROR *CRITICAL*; should not be here',
+                                           _('You cannot do that now')])
+        proto.user.isLogged = isLogged
+        self.renderer.canHideInterface = canHide
+        self.assertEquals(self.factory.interface.messageBoxes, [_('You cannot do that now')])
 # -----------------------------------------------------------------------------------------------------
 def GetTestSuite():
     suite = unittest.TestSuite()
